2008-06-15  Andreas Kirschbaum

	* Implement resolution 1600x1600; this allows the maximum view
	size current Crossfire servers support.

2008-06-13  Andreas Kirschbaum

	* Implement command history for all text input fields.

2008-06-12  Andreas Kirschbaum

	* Display resistance values as numbers in protections dialog.

	* Allow key bindings to TAB key.

2008-06-01  Andreas Kirschbaum

	* Fix crash while editing command input.

	* Reset map view when connecting to a server.

2008-05-15  Andreas Kirschbaum

	* Auto-elect the default server entry even if not visible
	initially.

	* Improve tooltips for hp/sp/grace/food/experience gauges.

	* Include item weight and cursed/damned/magic/blessed/unpaid
	information in item tooltips.

	* Replace cursed/damned/magic/blessed markers with icon background
	colors.

	* Highlight magical, blessed, and unpaid items in inventory and
	ground view.

2008-05-14  Andreas Kirschbaum

	* Add support for different icons for cursed and damned items.

	* Accelerate face loading.

	* Change syntax of "item" skin commands.

2008-05-12  Andreas Kirschbaum

	* Highlight damned items in inventory and ground view.

	* Rewrite the face caching code to remove lags when loading (many)
	images after entering a new map. Now all image loading is executed
	asynchronously to the main rendering loop.

2008-05-06  Andreas Kirschbaum

	* ragnorok: Do not display duplicate items in ground view in
	some resolutions.

2008-05-01  Andreas Kirschbaum

	* Fix magic map display for resolutions other than 1024x768.

2008-04-28  Andreas Kirschbaum

	* Implement #1877617 (Transparent windows).

2008-04-27  Andreas Kirschbaum

	* Clear inventory and ground view when reconnecting.

	* Implement part of #1874043 (Copy from message window): in input
	fields CTRL-V now pastes the system's selection.

	* Implement #1874012 (Other window sizes): ragnorok: Implement
	resolutions 1280x800, 1280x1024, 1400x800, 1400x1050, 1440x900,
	and 1600x1200.
