@@ -1,0 +1,51 @@
+//
+// This file is part of JXClient, the Fullscreen Java Crossfire Client.
+//
+//    JXClient is free software; you can redistribute it and/or modify
+//    it under the terms of the GNU General Public License as published by
+//    the Free Software Foundation; either version 2 of the License, or
+//    (at your option) any later version.
+//
+//    JXClient is distributed in the hope that it will be useful,
+//    but WITHOUT ANY WARRANTY; without even the implied warranty of
+//    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//    GNU General Public License for more details.
+//
+//    You should have received a copy of the GNU General Public License
+//    along with JXClient; if not, write to the Free Software
+//    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+//
+// JXClient is (C)2005 by Yann Chachkoff.
+//
+package com.realtime.crossfire.jxclient.util;
+
+import java.util.regex.Pattern;
+
+/**
+ * Utility class for string manipulation.
+ * @author Andreas Kirschbaum
+ */
+public class StringUtils
+{
+    /**
+     * A pattern matching leading whitespace.
+     */
+    public static final Pattern patternLeadingWhitespace = Pattern.compile("^[ \t]+");
+
+    /**
+     * Private constructor to prevent instantiation.
+     */
+    private StringUtils()
+    {
+    }
+
+    /**
+     * Removes leading whitespace from a string.
+     * @param str the string
+     * @return the string without leading whitespace
+     */
+    public static String trimLeading(final String str)
+    {
+        return patternLeadingWhitespace.matcher(str).replaceAll("");
+    }
+}
