@@ -1,3 +1,7 @@
+2008-06-20  Andreas Kirschbaum
+
+	* Implement bind -e.
+
 2008-06-15  Andreas Kirschbaum
 
 	* Implement resolution 1600x1600; this allows the maximum view
